--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
     "builds": [
       {
         "src": "Marketplace/wsgi.py",
-        "use": "@vercel/python",
-          "config": { "maxLambdaSize": "15mb", "runtime": "python3.10.6"}
+        "use": "@vercel/python"
       }
     ],
     "routes": [
