--- a/requirements.txt
+++ b/requirements.txt
@@ -109,6 +109,7 @@ unattended-upgrades==0.1
 urllib3==1.26.5
 usb-creator==0.3.7
 vboxapi==1.0
+vercel==0.2.1
 virtualenv==20.20.0
 wadllib==1.3.6
 webencodings==0.5.1
